Petit debut du UI, juste fait quelques tests pour afficher de l'info sur les composants.

--- a/STM.GDA.Web/Views/Composant/Index.cshtml
+++ b/STM.GDA.Web/Views/Composant/Index.cshtml
@@ -5,5 +5,15 @@
 
 @for (var i = 0; i < Model.Count; i++)
 {
-   @Html.ValueFor(m => m[i].Nom) <br/>
+    <p>Nom</p>
+    @Html.ValueFor(m => m[i].Nom); <br />
+    <br />
+    <p>Technologie</p>
+    @Html.ValueFor(m => m[i].TechnologiesNom); <br />
+    <br />
+
+    <p>Dependance</p>
+    @Html.ValueFor(m => m[i].DependancesNom); <br />
+    <br />
+
 }
