--- a/STM.GDA.Web/Views/Composant/Index.cshtml
+++ b/STM.GDA.Web/Views/Composant/Index.cshtml
@@ -5,9 +5,11 @@
 <h2>Liste des applications et services</h2>
 
 <div class="divListe">
-    <div class="input-group">
-        <span class="input-group-addon transparent"><span class="glyphicon glyphicon-search"></span></span>
-        <input type="text" id="txtFiltre" class="form-control left-border-none" placeholder="Rechercher">
+    <div class="search-group">
+        <div class="search-input input-group">
+            <span class="input-group-addon transparent"><span class="glyphicon glyphicon-search"></span></span>
+            <input type="text" id="txtFiltre" class="form-control left-border-none" placeholder="Rechercher">
+        </div>
         <button type="button" id="btnExportCourt" class="btn btn-default">Export court</button>
         <button type="button" id="btnExportLong" class="btn btn-default">Export long</button>
     </div>
