--- a/STM.GDA.Web/Views/Composant/_Liste.cshtml
+++ b/STM.GDA.Web/Views/Composant/_Liste.cshtml
@@ -4,20 +4,20 @@
 @foreach (var composant in Model)
 {
 <div class="divComposant" onclick="window.location.href = '@Url.Action("Details", "Composant", new { id =  @Html.ValueFor(x => composant.Id) })'">
-    <div class="col-md-10 bold padding-top">
+    <div class="col-sm-10 bold padding-top">
         @Html.DisplayFor(x => composant.AbreviationNom)
     </div>
 
-    <div class="col-md-2 italic right-align padding-top">
+    <div class="col-sm-2 italic right-align padding-top version">
         @Html.LabelFor(x => composant.Version)
         @Html.DisplayFor(x => composant.Version)
     </div>
 
-    <div class="col-md-12 description italic">
+    <div class="col-xs-12 description italic">
         @Html.DisplayFor(x => composant.Description)
     </div>
 
-    <div class="col-md-12 italic">
+    <div class="col-xs-12 italic tags">
         @foreach (var technologie in composant.Technologies)
         {
             <div class="tag">
