--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -1,45 +1,131 @@
-﻿@model STM.GDA.Web.Models.ComposantModel
+﻿@section Styles {
+    <link href="@Url.Content("~/Content/ComposantDetails.css")" rel="stylesheet" type="text/css" />
+}
 
-<h2>Détails</h2>
+@model STM.GDA.Web.Models.ComposantModel
 
-<div>
-    <p>
-        @Html.ActionLink("Retour  à la lise", "Index")
-    </p>
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nom)
-        </dt>
+<div class="container">
+    <div class="col-md-4">
+        @Html.ActionLink("Retour  à la lise", "Index") <br>
+        <h3>Détails</h3>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nom)
-        </dd>
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.Nom)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.Nom)
+            </div>
+        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Abrevriation)
-        </dt>
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.Abrevriation)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.Abrevriation)
+            </div>
+        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Abrevriation)
-        </dd>
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.Version)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.Version)
+            </div>
+        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.Description)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.Description)
+            </div>
+        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.Type)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.Type.Nom)
+            </div>
+        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Version)
-        </dt>
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.ResonsablesText)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.ResonsablesText)
+            </div>
+        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Version)
-        </dd>
-    </dl>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) 
-    </p>
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.ClientsText)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.ClientsText)
+            </div>
+        </div>
+
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.NomBD)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.NomBD)
+            </div>
+        </div>
+
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.SourceControlPath)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.SourceControlPath)
+            </div>
+        </div>
+
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.SourceControlPath)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.SourceControlPath)
+            </div>
+        </div>
+
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.BC)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.BC)
+            </div>
+        </div>
+
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.BW)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.BW)
+            </div>
+        </div>
+
+        <div class="value">
+            <div class="col-md-4 align-right">
+                @Html.DisplayNameFor(m => m.DerniereMAJ)
+            </div>
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.DerniereMAJ)
+            </div>
+        </div>
+
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+    </div>
 </div>
