--- a/STM.GDA.Web/Content/Composant.css
+++ b/STM.GDA.Web/Content/Composant.css
@@ -107,6 +107,15 @@ label {
     bottom: 20px;
     right: 20px;
     display: none;
+    border: 1px solid #79c3ec;
+    background: #f4fafd;
+    color: #79c3ec;
+}
+
+.scroll-up:hover,
+.scroll-up:focus {
+    background: #79c3ec;
+    border-color: #79c3ec;
 }
 
 .overlay {
