Avancement de la page Détails d'un composant. Toutes les informations sont affichées et le combo box d'environnement affiche les valeurs en fonction de l'environnement sélectionné.

--- a/STM.GDA.Web/Content/ComposantDetails.css
+++ b/STM.GDA.Web/Content/ComposantDetails.css
@@ -6,3 +6,15 @@
     overflow: auto;
     padding-bottom: 10px;
 }
+
+.border {
+    border: 1px solid black;
+}
+
+.padding-top {
+    padding-top: 10px;
+}
+
+.marging-top {
+    margin-top: 10px;
+}
