--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -3,7 +3,7 @@
 }
 
 @model STM.GDA.Web.Models.ComposantModel
-@Html.ActionLink("Retour  à la lise", "Index") <br>
+@Html.ActionLink("Retour à la liste", "Index") <br>
 <div class="container">
     <div class="col-md-5">
 
@@ -20,10 +20,10 @@
 
         <div class="value">
             <div class="col-md-3 align-right">
-                @Html.DisplayNameFor(m => m.Abrevriation)
+                @Html.DisplayNameFor(m => m.Abreviation)
             </div>
             <div class="col-md-9">
-                @Html.DisplayFor(m => m.Abrevriation)
+                @Html.DisplayFor(m => m.Abreviation)
             </div>
         </div>
 
@@ -157,5 +157,9 @@
         ).done(function (result) {
             $("#divDependance").html(result);
         });
-    })
+    });
+
+    $("#btnModifier").click(function () {
+        window.location.href = '@Url.Action("Modifier", "Composant", new { id = @Html.Raw(Json.Encode(Model.Id)) })';
+    });
 </script>
